gcc/testsuite/rust/rustc/ui/invalid/invalid-debugger-visualizer-target_dg.rs
#[debugger_visualizer(natvis_file = "./foo.natvis.xml")] // { dg-error "" "" { target *-*-* } }
fn main() {}

